build/log/idf_py_stderr_output_21779
/home/pi/remoteLED/main/remoteLED.c: In function '_http_event_handler':
/home/pi/remoteLED/main/remoteLED.c:45:17: error: 'auth_token' undeclared (first use in this function)
   45 |         strncpy(auth_token, (char *)evt->data, evt->data_len);
      |                 ^~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:45:17: note: each undeclared identifier is reported only once for each function it appears in
/home/pi/remoteLED/main/remoteLED.c: In function 'get_auth_token':
/home/pi/remoteLED/main/remoteLED.c:84:25: error: 'auth_token' undeclared (first use in this function); did you mean 'get_auth_token'?
   84 |                 strncpy(auth_token, access->valuestring, sizeof(auth_token) - 1);
      |                         ^~~~~~~~~~
      |                         get_auth_token
/home/pi/remoteLED/main/remoteLED.c:68:13: warning: unused variable 'content_length' [-Wunused-variable]
   68 |         int content_length = esp_http_client_get_content_length(client);
      |             ^~~~~~~~~~~~~~
In file included from /home/pi/remoteLED/main/remoteLED.c:5:
/home/pi/remoteLED/main/remoteLED.c: In function 'fetch_switch_state':
/home/pi/remoteLED/main/remoteLED.c:169:61: error: 'auth_token' undeclared (first use in this function); did you mean 'get_auth_token'?
  169 |     ESP_LOGI(TAG, "auth_token in fetch_switch_state(): %s", auth_token);
      |                                                             ^~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:140:137: note: in definition of macro 'ESP_LOG_LEVEL'
  140 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:169:5: note: in expansion of macro 'ESP_LOGI'
  169 |     ESP_LOGI(TAG, "auth_token in fetch_switch_state(): %s", auth_token);
      |     ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
